[tool.poetry]
name = "Amazhist Python"
version = "0.1.0"
description = "Amazon.co.jp の購入履歴情報を収集するスクリプトです．"
authors = ["KIMATA Tetsuya <kimata@green-rabbit.net>"]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.1.3"

[tool.pytest.ini_options]
minversion = "6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
