[tool.poetry]
name = "Amazhist Python"
version = "0.1.0"
description = "Amazon.co.jp の購入履歴情報を収集するスクリプトです．"
authors = ["KIMATA Tetsuya <kimata@green-rabbit.net>"]


[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
pyyaml = "^6.0.1"
imageio = "^2.34.0"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.1.3"

[tool.pytest.ini_options]
minversion = "6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
